# research-agent-kata

./: .env.example  .gitignore  README.md  pyproject.toml
src/research_agent_kata/: config.py  main.py
